--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -6,16 +6,15 @@ jobs:
    steps:
      - uses: actions/checkout@v2
      - run: echo "The job was automatically triggered by a ${{ github.event_name }} event"
-     - run: python main.py
-     - run: python main.py
-     - run: python main.py
-     - run: python main.py
-     - run: python main.py
-     - run: python main.py
-     - run: python main.py
-     - run: python main.py
-     - run: python main.py
-     - run: python main.py
-     - run: python main.py
+     - run: js coding challenge
+     - run: js coding challenge
+     - run: js coding challenge
+     - run: js coding challenge
+     - run: js coding challenge
+     - run: js coding challenge
+     - run: js coding challenge
+     - run: js coding challenge
+     - run: js coding challenge
+     - run: js coding challenge
      
      
