--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -6,15 +6,5 @@ jobs:
    steps:
      - uses: actions/checkout@v2
      - run: echo "The job was automatically triggered by a ${{ github.event_name }} event"
-     - run: js coding challenge
-     - run: js coding challenge
-     - run: js coding challenge
-     - run: js coding challenge
-     - run: js coding challenge
-     - run: js coding challenge
-     - run: js coding challenge
-     - run: js coding challenge
-     - run: js coding challenge
-     - run: js coding challenge
-     
+     - run: JS CODING CHALLENGE FOR PEACE AND HENRY
      
